chore(update): eclipse 2023 09 (#3426)
Update target platform to Eclipse 2023-09.
Update the org.eclipse.datatools.modelbase.sql.query patch project.
Fork org.eclipse.gmf.tooling.runtime to maintain a lighter version with
less dependency constraints.

Relates to [BPM-41](https://bonitasoft.atlassian.net/browse/BPM-41)